# r-type-axel.londas

./: CMakeLists.txt  Dockerfile.linux  Dockerfile.windows  README.md  delete_font_cpp.sh  docker-compose.yml  note.txt
configuration_files/: info.ini  inputs.ini  server.ini
documentation/: Doxyfile  add_features.md  coding_guidelines.md  configuration.md  protocol.md
documentation/docs/html/: ActualiseDrawable_8cpp.html  ActualiseDrawable_8cpp_source.html  Controllable_8cpp.html  Controllable_8cpp_source.html  Controllable_8hpp.html  Controllable_8hpp_source.html  Drawable_8cpp.html  Drawable_8cpp_source.html  Drawable_8hpp.html  Drawable_8hpp_source.html  Entity_8cpp.html  Entity_8cpp_source.html  Entity_8hpp.html  Entity_8hpp_source.html  MakeVinicius_8cpp.html  MakeVinicius_8cpp_source.html  NetworkClient_8cpp.html  NetworkClient_8cpp_source.html  NetworkClient_8hpp.html  NetworkClient_8hpp_source.html  NetworkServer_8cpp.html  NetworkServer_8cpp_source.html  NetworkServer_8hpp.html  NetworkServer_8hpp_source.html  Parsing_8cpp.html  Parsing_8cpp_source.html  Parsing_8hpp.html  Parsing_8hpp_source.html  Position_8hpp.html  Position_8hpp_source.html  (+131 more)
r-type/docs/: coding_guidelines.md  configuration.md  ecs.md  protocol.md  technical_and_comparative_study.md
script/: video_parser.sh
src/Parsing/: Parsing.hpp
src/client/: CMakeLists.txt  main.cpp
src/client/src/AnimateShoot/: AnimateShoot.cpp  AnimateShoot.hpp
src/client/src/AnimateSprite/: AnimateSprite.cpp  AnimateSprite.hpp
src/client/src/ClientGameState/: ClientGameState.hpp
src/client/src/Displayable/: Displayable.cpp  Displayable.hpp
src/client/src/Error/: Error.cpp  Error.hpp
src/client/src/GameApp/: GameApp.cpp  GameApp.hpp  componantInitialisation.cpp
src/client/src/Gameoverlay/: Gameoverlay.cpp  Gameoverlay.hpp  Gameoverlay.tpp  OverlayElement.hpp  OverlayElementTemplate.hpp  OverlayElementTemplate.tpp
src/client/src/Menu/: Menu.cpp  Menu.hpp
src/client/src/MusicHandler/: MusicHandler.cpp  MusicHandler.hpp
src/client/src/ServerCom/: SafeQueue.hpp  ServerCom.cpp  ServerCom.hpp
src/client/src/TCP/: CRoomClient.cpp  CRoomClient.hpp  ParsingTcp.cpp  ParsingTcp.hpp
src/client/src/TextureHandler/: TextureHandler.hpp
src/client/src/VideoComponent/Clock/: Clock.cpp  Clock.hpp
src/client/src/VideoComponent/Frame/: Frame.cpp  Frame.hpp
src/client/src/VideoComponent/Queue/: Queue.cpp  Queue.hpp
src/client/src/VideoComponent/Stack/: Stack.cpp  Stack.hpp
src/client/src/VideoComponent/Vector/: Vector.hpp
src/client/src/VideoComponent/Video/: Video.cpp  Video.hpp
src/client/src/network/: NetworkClient.cpp  NetworkClient.hpp
src/client/src/protocol/: ProtocolClient.cpp  ProtocolClient.hpp
src/ecs/: CMakeLists.txt
src/ecs/include/ecs/: ECSError.hpp  Entity.hpp  Export.hpp  Registry.hpp  Registry.tpp  SparseArray.hpp  SparseArray.tpp
src/ecs/src/: ECSError.cpp  Entity.cpp  Registry.cpp
src/flappy_bird/: CMakeLists.txt  GameState.cpp  GameState.hpp  Main.cpp
src/flappy_bird/components/: Drawable.cpp  HitBox.cpp  HitBox.hpp  Pipe.cpp  Pipe.hpp  Player.hpp  Point.hpp  Position.cpp
src/flappy_bird/systems/: background_render_system.cpp  clear_render_system.cpp  display_render_system.cpp  pipes_mouvement_system.cpp  pipes_render_system.cpp  player_control_system.cpp  player_mouvement_system.cpp  player_pipes_collision_system.cpp  player_render_system.cpp  score_render_system.cpp  score_system.cpp  spawn_pipes_system.cpp  spawn_player_system.cpp  systems.hpp
src/server/: CMakeLists.txt  GameState.cpp  GameState.hpp  Main.cpp  PacketRepresentation.hpp  Server.cpp  Server.hpp  Timer.cpp  Timer.hpp
src/server/Error/: Error.cpp  Error.hpp
src/server/Parsing/: Parsing.cpp
src/server/components/: BasicCanon.hpp  BossMob.hpp  BossMobBullet.hpp  Boulder.hpp  Controllable.cpp  Controllable.hpp  Damage.cpp  Damage.hpp  Drawable.hpp  Health.cpp  Health.hpp  HealthCollectable.hpp  HitBox.cpp  HitBox.hpp  LaserCanon.hpp  LaserCanonCollectable.hpp  LocalPlayer.hpp  Mob.hpp  MobBullet.hpp  NetworkPlayer.cpp  NetworkPlayer.hpp  PlayerBullet.hpp  PlayerLaser.hpp  Position.hpp  ShootCooldown.cpp  ShootCooldown.hpp  TurretMob.hpp  TurretMobBullet.hpp  Velocity.cpp  Velocity.hpp
src/server/configuration_files/: info.ini
src/server/game_config/: Abilities.cpp  Abilities.hpp  Boss.cpp  Boss.hpp  GameParsing.cpp  GameParsing.hpp  Mobs.cpp  Mobs.hpp  Stage.cpp  Stage.hpp  gameConfig.yml
src/server/network/: CRoomServer.cpp  CRoomServer.hpp  Lobby.cpp  Lobby.hpp  NetworkServer.cpp  NetworkServer.hpp  SafeQueue.tpp
src/server/protocol/: ProtocolServer.cpp  ProtocolServer.hpp
src/server/systems/: boss_bullets_packet_system.cpp  boss_data_packages_system.cpp  boss_mob_ai_system.cpp  boss_mob_bullets_mouvement_system.cpp  boss_mob_render_system.cpp  boss_mobs_bullets_players_collision.cpp  boss_mobs_bullets_render_system.cpp  boulders_data_package_system.cpp  boulders_mouvement_system.cpp  boulders_players_collisions_system.cpp  boulders_render_system.cpp  collectables_data_packet_system.cpp  death_boss_mob_bullets_system.cpp  death_boss_mob_system.cpp  deaths_mobs_system.cpp  deaths_players_system.cpp  display_render_system.cpp  health_collectables_players_collisions_system.cpp  health_collectables_render_system.cpp  laser_canons_collectables_players_collisions_system.cpp  laser_canons_collectables_render_system.cpp  level_1_end_detection_system.cpp  level_2_end_detection_system.cpp  local_player_input_system.cpp  lose_detection_system.cpp  mobs_ai_system.cpp  mobs_bullets_data_packet_system.cpp  mobs_bullets_mouvement_system.cpp  mobs_bullets_players_collisions_system.cpp  mobs_bullets_render_system.cpp  mobs_data_packet_system.cpp  mobs_render_system.cpp  network_packet_system.cpp  network_players_inputs_system.cpp  player_lasers_boss_mobs_bullets_collision.cpp  players_basic_canon_shooting_system.cpp  players_bullets_boss_mob_bullets_collisions_system.cpp  players_bullets_boss_mob_collisions_system.cpp  players_bullets_data_packet_system.cpp  players_bullets_mobs_collisions_system.cpp  (+35 more)
(+227 files in other folders)
